# concordium-smart-contract-tools

./: .gitignore  .gitmodules  COPYRIGHT.txt  README.md  flake.nix
.github/workflows/: ci-dapps.yaml  ci-extension.yaml  ci-lint-extension.yaml  ci.yaml  release-cargo-concordium.yml  release-reproducible-smart-contract.yaml  release-scTool.yml  release-vscode-extension.yml  yarn-audit.yaml
cargo-concordium/: CHANGELOG.md  Cargo.toml  README.md
cargo-concordium/scripts/: linux-cargo-concordium.Jenkinsfile  windows-cargo-concordium.Jenkinsfile
cargo-concordium/src/: build.rs  context.rs  contract_schema.rs  json_schema.rs  lib.rs  main.rs  reproducible_builds.rs  schema_json.rs  templates.rs  tests.rs  utils.rs
cargo-concordium/src/templates/: cis2-nft-cargo.toml  default-cargo.toml  default-lib.rs
concordium-smart-contract-testing/: CHANGELOG.md  Cargo.toml
concordium-smart-contract-testing/src/: impls.rs  lib.rs  types.rs
front-end-tools/: .eslintrc.js  .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
front-end-tools/src/: CCDScanLinks.tsx  DeployComponent.tsx  InitComponent.tsx  Main.tsx  ReadComponent.tsx  Root.tsx  WriteComponent.tsx  constants.ts  index.css  index.html  reading_from_blockchain.ts  utils.ts  writing_to_blockchain.ts
front-end-tools/src/components/: Box.tsx  CCDScanLinks.tsx  DeployComponent.tsx  InitComponent.tsx  ReadComponent.tsx  UpdateComponent.tsx  WriteComponent.tsx
reproducible/: Jenkinsfile  build.Dockerfile  run-copy.sh
reproducible/example-contract/: Cargo.toml
reproducible/example-contract/concordium-out/: module.wasm.v1  module.wasm.v1.tar
reproducible/example-contract/src/: lib.rs
vscode-cargo-concordium/: .gitignore  README.md  package-lock.json  package.json
vscode-cargo-concordium/src/: cargo-concordium.ts  commands.ts  configuration.ts  extension.ts
vscode-cargo-concordium/src/test/suite/: extension.test.ts  index.ts
vscode-smart-contracts/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  snippets.json  tsconfig.json
vscode-smart-contracts/scripts/: linux-vscode-smart-contracts.Jenkinsfile  macos-vscode-smart-contracts.Jenkinsfile  windows-vscode-smart-contracts.Jenkinsfile
vscode-smart-contracts/src/: cargo-concordium.ts  ccd-js-gen.ts  commands.ts  configuration.ts  executable-wrapper-helpers.ts  extension.ts  tasks.ts
vscode-smart-contracts/src/test/: runTest.ts
vscode-smart-contracts/src/test/suite/: extension.test.ts
