[package]
name = "cargo-concordium"
version = "3.0.0"
authors = ["Concordium <developers@concordium.com>"]
edition = "2021"
license-file = "../LICENSE"
rust-version = "1.65"
readme = "README.md"
description = "A tool to build and test smart contracts on the Concordium blockchain."
homepage = "https://github.com/Concordium/concordium-smart-contract-tools"
repository = "https://github.com/Concordium/concordium-smart-contract-tools"
include = ["Cargo.toml", "Cargo.lock", "src/*"] # Only include the actual sources.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
structopt = "0.3"
hex = "0.4"
base64= "0.21"
serde = "1.0"
serde_json="1.0"
anyhow = "1.0"
ansi_term = "0.12"
ptree = "0.4"
strsim = "0.10"
which = "4.3"
rand = { version = "=0.7", features = ["small_rng"] }
cargo_metadata = "0.15"
ignore = "0.4"
tar = "0.4"
sha2 = "0.10"
tempfile = "3.8"
reqwest = { version = "0.11.22", features = ["blocking"] }

[dependencies.concordium-wasm]
path = "../concordium-base/smart-contracts/wasm-transform"
version = "3.0"

[dependencies.concordium-smart-contract-engine]
version = "3.1"
path = "../concordium-base/smart-contracts/wasm-chain-integration/"
features = ["display-state"]

[dependencies.concordium_base]
version = "3.1.1"
path = "../concordium-base/rust-src/concordium_base"
